--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -1,34 +1,38 @@
 ---
-import Layout from "../layouts/default.astro"
+import Layout from '../layouts/default.astro';
+import ShopItems from '../components/shop-items.astro';
+import { Cart } from '../components/solid/cart';
 ---
 
 <Layout>
-  <div class="shop">
-    <h1>Shop Sandwich Kits</h1>
+	<div class="shop">
+		<h1>Shop Sandwich Kits</h1>
 
-    <noscript>
-      <p>
-        Javascript is required to purchase things from the sandwichweb store. To order by phone, call <a href="tel:1248345508">+1 248-434-5508</a>
-      </p>
-    </noscript>
+		<noscript>
+			<p>
+				Javascript is required to purchase things from the sandwichweb store. To
+				order by phone, call <a href="tel:1248345508">+1 248-434-5508</a>
+			</p>
+		</noscript>
 
-    <div class="products">
-      <p>TODO: list products</p>
-      <p>TODO: show cart</p>
-    </div>
-  </div>
+		<div class="products">
+			<ShopItems />
+
+			<Cart client:only="solid-js" />
+		</div>
+	</div>
 </Layout>
 
 <style>
-  .shop {
-    padding: 3rem 5%;
-  }
+	.shop {
+		padding: 3rem 5%;
+	}
 
-  .products {
-    align-items: flex-start;
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: 1fr 260px;
-    position: relative;
-  }
+	.products {
+		align-items: flex-start;
+		display: grid;
+		gap: 2rem;
+		grid-template-columns: 1fr 260px;
+		position: relative;
+	}
 </style>
