--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -24,6 +24,17 @@ const blogPosts = await getCollection('blog');
 			})
 		}
 	</section>
+
+	<p class="feed">
+		<a href="/rss.xml">
+			<span
+				role="img"
+				aria-label="satellite dish"
+				>📡</span
+			>
+			<span class="link-text">Suscribe to the RSS Feed</span>
+		</a>
+	</p>
 </Layout>
 
 <style>
